[package]
name          = "kabto"
version       = "0.1.0"
edition       = "2021"
authors       = ["kanarus <kanarus786@gmail.com>"]
documentation = "https://docs.rs/kabto"
homepage      = "https://crates.io/crates/kabto"
repository    = "https://github.com/kana-rus/kabto"
readme        = "README.md"
license       = "MIT"
description   = ""
keywords      = []
categories    = []


[dependencies.wasm-bindgen-futures]
version  = "0.4"

[dependencies.web-sys]
version  = "0.3"
features = [
    # core features
    "Window",
    "Document",
    "Element",
    "Text",
    "console",

    # events
    "AnimationEvent",
    "CompositionEvent",
    "FocusEvent",
    "InputEvent",
    "KeyboardEvent",
    "MouseEvent",
    "PointerEvent",
    "TouchEvent",
    "TransitionEvent",
    "UiEvent",
    "WheelEvent",

    # currently activate
    "IdleDeadline",
]


[features]

##### DEBUG ######
DEBUG   = []
default = ["DEBUG"]
